         are more Retroarch cores with this feature.

         See https://github.com/libretro/mame2003-libretro/pull/348
         See https://github.com/libretro/mame2003-plus-libretro/pull/8
         See https://github.com/libretro/mame2010-libretro/pull/123
         See https://github.com/libretro/mame2010-libretro/tree/master/metadata


[B]Advanced MAME Launcher | version 1.0.2 | 18 June 2021[/B]

NOTE     Version was bumped to 1.0.2 to keep feature-sync with 0.10.2

FEATURE  [CORE] Synched utils.py and misc.py with AEL.

FEATURE  [CORE] Support new history.dat XML format.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=3029005#pid3029005


[B]Advanced MAME Launcher | version 1.0.1 | non-released[/B]

NOTE     This version was never uploaded to the Kodi repo.

FIX      [CORE] Fix crash when building Controls (Expanded) catalog in MAME 2003 Plus mode.
         Also fixed Controls (Expanded) and Controls (Compact) catalogues for empty controls.

FIX      [CORE] Fix SKIN_SHOW_* launchers. 

FIX      [CORE] Fix bug in mame_update_MAME_MostPlay_objects().


[B]Advanced MAME Launcher | version 1.0.0 | 27 November 2020[/B]

FEATURE  [CORE] Port the addon to Kodi Matrix and Python 3.

FEATURE  [CORE] xbmc.translatePath is deprecated in Matrix, use xbmcvfs.translatePath instead.

FIX      [MANUALS] The pdfwr library is not working well with Python 3. PDF image extraction
         have been disabled until this issue is fixed.


[B]Advanced MAME Launcher | version 0.10.2 | 18 June 2021[/B]

NOTE     Code synched with 1.0.2.

FEATURE  [CORE] Synched utils.py and misc.py with AEL.

FEATURE  [CORE] Support new history.dat XML format.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=3029005#pid3029005


[B]Advanced MAME Launcher | version 0.10.1 | 04 February 2021[/B]

FIX      [CORE] Fix crash when building Controls (Expanded) catalog in MAME 2003 Plus mode.