@@ -70,6 +70,9 @@ WIP      Retroarch core MAME 2003 Plus allows to save the MAME XML file needed b
          See https://github.com/libretro/mame2010-libretro/tree/master/metadata
 
 
+[B]Advanced MAME Launcher | version 1.0.3 | xx xxxxxx 2022[/B]
+
+
 [B]Advanced MAME Launcher | version 1.0.2 | 18 June 2021[/B]
 
 NOTE     Version was bumped to 1.0.2 to keep feature-sync with 0.10.2
